AddOpens sppedup if available