@@ -1,86 +1,33 @@
 package org.suche.json;
 
-import java.util.Arrays;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 
 final class JSONString {
-	private static final byte[] hex = "0123456789abcdef".getBytes();
+	static final byte[]     hex               = "0123456789abcdef".getBytes();
+	static final VarHandle  LONG_VIEW         = MethodHandles.byteArrayViewVarHandle(long[].class, ByteOrder.LITTLE_ENDIAN);
+	static final long       QUOTE_PATTERN     = 0x2222222222222222L; // '"' in jedem Byte
+	static final long       BACKSLASH_PATTERN = 0x5C5C5C5C5C5C5C5CL; // '\' in jedem Byte
+	static final long       NON_ASCII_PATTERN = 0x8080808080808080L; // Sign-Bit in jedem Byte
+	static final long       SWARN             = 0x0101010101010101L;
 
-	// Lookup table for ASCII characters (0-127).
-	// 0  = Safe ASCII character (can be copied directly)
-	// -1 = Unicode control character requiring \ u00XX escaping
-	// >0 = Direct escape character (e.g., 'n' for \n)
-	private static final byte[] ESCAPE_TABLE = new byte[128];
-
-	static {
-		Arrays.fill(ESCAPE_TABLE, (byte) -1);
-		for (var i = 32; i < 128; i++) ESCAPE_TABLE[i] = 0;
-		ESCAPE_TABLE['"']  = '"';
-		ESCAPE_TABLE['\\'] = '\\';
-		ESCAPE_TABLE['\b'] = 'b';
-		ESCAPE_TABLE['\f'] = 'f';
-		ESCAPE_TABLE['\n'] = 'n';
-		ESCAPE_TABLE['\r'] = 'r';
-		ESCAPE_TABLE['\t'] = 't';
+	sealed interface JSONStringProvider permits JSONStringVanilla, JSONStringAddOpens {
+		// Returns (sOff << 32) | dstOff
+		long encodeChunk(String s, int sOff, int sLen, byte[] dst, int dstOff, int dstLen);
 	}
 
-	public static long encodeChunk(final String s, int sOff, final int sLen, final byte[] dst, int dstOff, final int dstLen) {
-		final var startS    = sOff;
-		final var startD    = dstOff;
-		final var safeLimit = dstLen - 6;
+	private static final JSONStringProvider PROVIDER;
 
-		while (sOff < sLen && dstOff < safeLimit) {
-			// --- FAST PATH: ASCII COPY LOOP ---
-			// Calculate the maximum safe distance to avoid any bounds checks inside the loop.
-			// This unlocks C2 JIT auto-vectorization (SIMD) for pure ASCII string copying.
-			final var runLimit = sOff + Math.min(sLen - sOff, safeLimit - dstOff);
-			var c = s.charAt(sOff);
+	static {
+		JSONStringProvider selected;
+		try { selected = new JSONStringAddOpens(); } // 2. Test for Add-Opens access to String.value
+		catch (final Throwable _) { selected = JSONStringVanilla.INSTANCE; } // 3. Fallback to Vanilla (always works)
+		PROVIDER = selected;
+	}
 
-			while (sOff < runLimit) {
-				if (c >= 128 || ESCAPE_TABLE[c] != 0) break;
-				dst[dstOff++] = (byte) c;
-				sOff++;
-				if (sOff < runLimit) c = s.charAt(sOff);
-			}
-
-			if (sOff >= sLen || dstOff >= safeLimit) break;
-
-			// --- SLOW PATH: ESCAPES AND UNICODE ---
-			if (c < 128) {
-				final var esc = ESCAPE_TABLE[c];
-				if (esc > 0) {
-					dst[dstOff++] = '\\';
-					dst[dstOff++] = esc;
-				} else {
-					dst[dstOff++] = '\\'; dst[dstOff++] = 'u';
-					dst[dstOff++] = '0';  dst[dstOff++] = '0';
-					dst[dstOff++] = hex[(c >> 4) & 15]; dst[dstOff++] = hex[c & 15];
-				}
-				sOff++;
-			} else if (Character.isHighSurrogate(c) && sOff + 1 < sLen) {
-				final var low = s.charAt(sOff + 1);
-				if (Character.isLowSurrogate(low)) {
-					final var cp = Character.toCodePoint(c, low);
-					dst[dstOff++] = (byte) (0xF0 | (cp >> 18));
-					dst[dstOff++] = (byte) (0x80 | ((cp >> 12) & 0x3F));
-					dst[dstOff++] = (byte) (0x80 | ((cp >> 6) & 0x3F));
-					dst[dstOff++] = (byte) (0x80 | (cp & 0x3F));
-					sOff += 2;
-				} else {
-					dst[dstOff++] = '?';
-					sOff++;
-				}
-			} else {
-				if (c >= 0x800) {
-					dst[dstOff++] = (byte) (0xE0 | (c >> 12));
-					dst[dstOff++] = (byte) (0x80 | ((c >> 6) & 0x3F));
-				} else {
-					dst[dstOff++] = (byte) (0xC0 | (c >> 6));
-				}
-				dst[dstOff++] = (byte) (0x80 | (c & 0x3F));
-				sOff++;
-			}
-		}
-		return (((long) (sOff - startS)) << 32) | ((dstOff - startD) & 0xFFFFFFFFL);
+	static long encodeChunk(final String s, final int sOff, final int sLen, final byte[] dst, final int dstOff, final int dstLen) {
+		return PROVIDER.encodeChunk(s, sOff, sLen, dst, dstOff, dstLen);
 	}
 
 	static byte[] buildJsonKey(final String name, final boolean keyWrap) {
@@ -95,4 +42,55 @@ final class JSONString {
 		}
 		return java.util.Arrays.copyOf(temp, pos);
 	}
+
+	static long encodeLatin1(final byte[] src, int sOff, final int sLen, final byte[] dst, int dstOff, final int dstLen) {
+		final var startS = sOff;
+		final var startD = dstOff;
+		final var safeLimitD = dstLen - 6;
+
+		while (sOff < sLen && dstOff < safeLimitD) {
+			// Fast-Path: Bulk copy safe ASCII segments using SWAR directly on the internal array
+			final var remainingS = sLen - sOff;
+			final var remainingD = safeLimitD - dstOff;
+			final var runLimit = sOff + Math.min(remainingS, remainingD);
+
+			// SWAR scan on the INTERNAL string array
+			while (sOff <= runLimit - 8) {
+				final var word = (long) JSONString.LONG_VIEW.get(src, sOff);
+
+				// Check for Quote (0x22), Backslash (0x5C) or Non-ASCII (>0x7F)
+				final var quoteXor = word ^ JSONString.QUOTE_PATTERN;
+				final var hasQuote = (quoteXor - SWARN) & ~quoteXor & JSONString.NON_ASCII_PATTERN;
+
+				final var backslashXor = word ^ JSONString.BACKSLASH_PATTERN;
+				final var hasBackslash = (backslashXor - SWARN) & ~backslashXor & JSONString.NON_ASCII_PATTERN;
+
+				if ((hasQuote != 0) || (hasBackslash != 0) || ((word & JSONString.NON_ASCII_PATTERN) != 0)) {
+					break;
+				}
+				// Everything is safe ASCII: Copy 8 bytes at once from array to array
+				JSONString.LONG_VIEW.set(dst, dstOff, word);
+				sOff += 8;
+				dstOff += 8;
+			}
+
+			// Standard scalar processing for remaining/special chars
+			if (sOff < sLen && dstOff < safeLimitD) {
+				final var c = src[sOff++];
+				final var esc = JSONStringVanilla.ESCAPE_TABLE[c];
+				if (esc == 0)
+					dst[dstOff++] = c;
+				else if (esc > 0) {
+					dst[dstOff++] = '\\';
+					dst[dstOff++] = esc;
+				} else {
+					dst[dstOff++] = '\\'; dst[dstOff++] = 'u';
+					dst[dstOff++] = '0';  dst[dstOff++] = '0';
+					dst[dstOff++] = JSONString.hex[(c >> 4) & 15]; dst[dstOff++] = JSONString.hex[c & 15];
+				}
+			}
+		}
+		return (((long) (sOff - startS)) << 32) | ((dstOff - startD) & 0xFFFFFFFFL);
+	}
+
 }
